--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js", 
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "node": "^18.9.0"
+    "express": "^4.18.2",
+    "newrelic": "^9.10.1",
+    "node": "^18.9.0",
+    "nodemon": "^2.0.20"
   }
 }
